fix responsive visibility
fix responsive visibility

--- a/css/article.css
+++ b/css/article.css
@@ -167,7 +167,7 @@ figcaption {
     margin-left: 10px;
 }
 
-.container1 {
+.container {
     display: inline-block;
     cursor: pointer;
   }
